# gbremu

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  test.txt
frontend/: Cargo.toml
frontend/src/: cli.rs  main.rs  sdl.rs
gbemu/: CMakeLists.txt  main.c
include/: bus.h  cart.h  common.h  cpu.h  emu.h  instruction.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  emu.c  instruction.c
libemu/: Cargo.toml
libemu/src/: boot.rs  boot_data.rs  bus.rs  clock.rs  error.rs  gb.rs  lib.rs  mmu.rs  pad.rs  util.rs  utils.rs
libemu/src/cartridge/: header.rs  licensee.rs  mbc.rs  mbc0.rs  mod.rs
libemu/src/cartridge/mbc/: mbc0.rs  mod.rs
libemu/src/cpu/: instructions.rs  mod.rs  register.rs
libemu/src/cpu/instructions/: handler.rs  mod.rs
libemu/src/generic/: address.rs  device.rs  mod.rs  pcb.rs  reg.rs  share.rs  shared.rs
libemu/src/generic/arch/: address.rs  value.rs
libemu/src/generic/bus/: mapping.rs  mod.rs
libemu/src/generic/bus/adapt/: bank.rs
libemu/src/generic/device/: mod.rs  null.rs  pcb.rs
libemu/src/generic/memory/: mod.rs  ram.rs  rom.rs
libemu/src/hardware/: mod.rs  noc.rs  pic.rs
libemu/src/hardware/cartridge/: header.rs  licensee.rs  mod.rs
libemu/src/hardware/cartridge/mbc/: mbc0.rs  mbc1.rs  mod.rs
libemu/src/hardware/soc/: boot.rs  mod.rs
libemu/src/hardware/soc/cpu/: mod.rs  register.rs
libemu/src/hardware/soc/ppu/: mod.rs  palette.rs  tile.rs
libemu/src/soc/: boot.rs  dma.rs  mod.rs
libemu/src/soc/cpu/: inst.rs  mod.rs
libemu/src/soc/ppu/: mod.rs  object.rs  palette.rs
tests/: CMakeLists.txt
(+2 files in other folders)
