[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
libemu = { path = "../libemu" }
log = "0.4.21"
minifb = "0.26.0"
sdl2 = { version = "0.36.0", features = ["image", "ttf"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"
